# egui-personal-site

./: Cargo.toml  PRIVATE_BLOG.md  README.md  index.html  new_post.sh  new_private_post.sh  rust-toolchain
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
blog_posts/: 2025-10-29-120000-my-why.md  2025-10-31-103544-adhd-struggle.md  2025-10-31-191143-getting-started-with-gpu-programming.md  2025-11-02-182928-sensitivity.md  2026-02-22-092240-notes-for-a-mathematical-theory-of-communication.md  2026-02-23-201356-how-to-thrive-as-an-autistic-person.md  authenticity.md  living-with-adhd.md  my-why.md  privacy.md
private_blog_posts/: 2025-12-29-120000-secret-thoughts.md  2026-02-21-094917-the-first-half-of-my-twenties.md  2026-03-02-185709-living-with-autism.md  2026-03-03-213454-a-lesson-on-ai-alignment.md  2026-03-24-232759-ten-lessons-i-learned-within-the-last-year.md
scripts/: vercel-build.sh
src/: app.rs  main.rs
