[package]
name = "ps"
version = "0.1.0"
edition = "2021"
authors = ["Austin Liu <2ea64fad26@gmail.com>"]
# Trunk and recent crates need Rust 1.81+ for WASM
rust-version = "1.81"

[dependencies]
# Core UI framework
egui = "0.27.0"

# Markdown rendering in egui (CommonMark-compatible)
egui_commonmark = { version = "0.16", features = ["macros"] }

# Embedding static files (for blog posts)
include_dir = "0.7"

# Serialization for saving app state
serde = { version = "1.0", features = ["derive"] }

# Logging utilities
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# ================================
# Native (desktop) dependencies
# ================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Accessibility (screen readers)
    "default_fonts", # Include egui default fonts
    "glow",          # OpenGL renderer backend
    "persistence",   # Save app state between runs
] }

env_logger = "0.10" # Enable log output to console for native builds

# ================================
# Web (WASM) dependencies
# ================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.27.0", default-features = false, features = [
    "glow",          # Use WebGL
    "default_fonts", # Include egui fonts
    "persistence",   # Enable app state saving
] }

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Browser APIs (History, Location, etc.)
web-sys = { version = "0.3", features = ["History", "Location", "Window"] }

# Enable Rust panics and logs in browser console
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

# ================================
# Build Profiles
# ================================

[profile.release]
# Optimize for smaller/faster WASM
opt-level = 2

[profile.dev.package."*"]
# Optimize dependencies even in dev mode (for faster UI)
opt-level = 2

# ================================
# Notes / Hints
# ================================
# Folder structure (must exist at build time):
# ps/
#   Cargo.toml
#   src/
#   blog_posts/
#     hello.md
#     another.md
#
# Build for web:
#   trunk serve
#
# Build for native:
#   cargo run
